# easymode

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
ais_and_pom/: index.html
assets/: polarity_model.pt  ts_aretomo3.py
docs/: ais_and_pom.md  index.md  papers.md  training_collection.md  warp_relion_m.md
docs/models/: actin.md  cytoplasm.md  cytoplasmic_granule.md  ferritin.md  ice_particle.md  impdh.md  index.md  intermediate_filament.md  lipid_droplet.md  membrane.md  microtubule.md  mitochondrial_granule.md  mitochondrion.md  npc.md  nuclear_envelope.md  nucleus.md  prohibitin.md  proteasome.md  ribosome.md  tric.md  vault.md  void.md
docs/user_guide/: faq.md  overview.md
docs/user_guide/examples/: actin.md  colocalization_filtering.md  easymode_and_pom.md  lamella_surface_distance.md  microtubule.md  npc_orientation.md  picking_yturc.md  ribosome.md  vault.md  workshop_2026.md
docs/user_guide/functions/: general_denoisers.md  installation.md  picking.md  preprocessing.md  segmentation.md
docs/user_guide/pom/: contextualizing_particles.md  data_browser.md  installation.md
easymode/: main.py
easymode/core/: ais_wrapper.py  augmentations.py  distribution.py  inference.py  model.py  packaging.py  pick.py  reporting.py  train.py  util.py  warp.py  warp_wrapper.py
easymode/ddw/: inference.py  loss.py  model.py  train.py
easymode/denoiser/: model.py  train.py
easymode/encoder/: model.py
easymode/membrain_fourier_augmentations/: fourier_augmentations.py
easymode/n2n/: inference.py  train.py
easymode/segmentation/: augmentations.py  inference.py  model.py  model_v2.py  train.py
easymode/segmentation/membrain_fourier_augmentations/: filter_utils.py
easymode/tiltfilter/: inference.py  model.py  train.py
models/: index.html
models/actin/: index.html
models/cytoplasm/: index.html
models/cytoplasmic_granule/: index.html
models/ferritin/: index.html
models/hsp60/: index.html
models/ice_particle/: index.html
models/impdh/: index.html
models/intermediate_filament/: index.html
models/lipid_droplet/: index.html
models/membrane/: index.html
models/microtubule/: index.html
models/mitochondrial_granule/: index.html
models/mitochondrion/: index.html
models/npc/: index.html
models/nuclear_envelope/: index.html
models/nucleus/: index.html
models/prohibitin/: index.html
models/proteasome/: index.html
models/ribosome/: index.html
models/training_data/: index.html
models/tric/: index.html
models/vault/: index.html
models/vimentin/: index.html
models/void/: index.html
papers/: index.html
search/: search_index.json
src/easymode/: main.py
src/easymode/core/: ais_wrapper.py  config.py  distribution.py  packaging.py  reporting.py  settings.txt  warp_wrapper.py
src/easymode/ddw/: __init__.py  inference.py  loss.py  model.py  train.py
src/easymode/n2n/: __init__.py  inference.py  model.py  streaming_legacy.py  train.py
src/easymode/segmentation/: augmentations.py  extract.py  inference.py  model.py  model_current.py  model_lite.py  model_old.py  model_v2.py  train.py
src/easymode/segmentation/membrain_fourier_augmentations/: fourier_augmentations.py  transforms.py
src/easymode/segmentation/models/: __init__.py  unet_easymode.py  unet_easymode_deeper.py  unet_membrain.py  unet_membrain_groupnorm.py
src/easymode/segmentation/torch_version/: convert_weights.py  model_torch.py  validate_equivalence.py
src/easymode/tiltfilter/: inference.py
src/easymode/training/: __init__.py  sampler.py
styles/: extra.css
tests/: test_import.py  test_n2n_streaming_legacy.py  test_segmentation_streaming_legacy.py
training_collection/: index.html
user_guide/examples/actin/: index.html
user_guide/examples/colocalization_filtering/: index.html
user_guide/examples/easymode_and_pom/: index.html
user_guide/examples/lamella_surface_distance/: index.html
user_guide/examples/microtubule/: index.html
user_guide/examples/npc_orientation/: index.html
user_guide/examples/picking_yturc/: index.html
user_guide/examples/ribosome/: index.html
user_guide/examples/vault/: index.html
user_guide/examples/workshop_2026/: index.html
user_guide/faq/: index.html
user_guide/functions/general_denoisers/: index.html
user_guide/functions/installation/: index.html
user_guide/functions/picking/: index.html
user_guide/functions/preprocessing/: index.html
user_guide/functions/segmentation/: index.html
user_guide/overview/: index.html
user_guide/pom/contextualizing_particles/: index.html
user_guide/pom/data_browser/: index.html
user_guide/pom/installation/: index.html
warp_relion_m/: index.html
